--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<nav>
 		<ul>
-			<li><a href="#home">Home</li>
-			<li><a href="#About Us">About us</li>
-			<li><a href="#Contact Us">Contact Us</li>
+			<li><a href="#home">Home</a></li>
+			<li><a href="#About Us">About us</a></li>
+			<li><a href="#Contact Us">Contact Us</a</li>
 		</ul>
 	</nav>
 	<h1>3 random videos </h1>
